--- a/GFM/localisation/Host_decisions_events.csv
+++ b/GFM/localisation/Host_decisions_events.csv
@@ -1,41 +1,41 @@
-;;;;;;;;;;;;;;x,
-show_host_decisions_title;Show Host Decisions;;;;;;;;;;;;;;;;;;;;;;;;;x;;;;;;;;;;;;;;;;;,
-show_host_decisions_desc;Click to show all host decisions;;;;;;;;;;;;;;;;;;;;;;;;;x;;;;;;;;;;;;;;;;;,
-hide_host_decisions_title;Hide Host Decisions;;;;;;;;;;;;;;;;;;;;;;;;;x;;;;;;;;;;;;;;;;;,
-hide_host_decisions_desc;Click to hide all host decisions;;;;;;;;;;;;;;;;;;;;;;;;;x;;;;;;;;;;;;;;;;;,
-ally_all_countries_title;Ally All Countries;;;;;;;;;;;;;;;;;;;;;;;;;x;;;;;;;;;;;;;;;;;,
-ally_all_countries_desc;Click to ally all countries in the game;;;;;;;;;;;;;;;;;;;;;;;;;x;;;;;;;;;;;;;;;;;,
-unally_all_countries_title;Unally All Countries;;;;;;;;;;;;;;;;;;;;;;;;;x;;;;;;;;;;;;;;;;;,
-unally_all_countries_desc;Click to unally all countries in the game;;;;;;;;;;;;;;;;;;;;;;;;;x;;;;;;;;;;;;;;;;;,
-get_militaryaccess_with_all_countries_title;Grant Military Access to All Countries;;;;;;;;;;;;;;;;;;;;;;;;;x;;;;;;;;;;;;;;;;;,
-get_militaryaccess_with_all_countries_desc;Click to grant military access to all countries in the game. Manually remove the mil access given to the country or countries you want to set as targets for the decisions.;;;;;;;;;;;;;;;;;;;;;;;;;x;;;;;;;;;;;;;;;;;,
-remove_militaryaccess_with_all_countries_title;Remove Mil Access Given to All Countries;;;;;;;;;;;;;;;;;;;;;;;;;x;;;;;;;;;;;;;;;;;,
-remove_militaryaccess_with_all_countries_desc;Click to remove military access given to all countries in the game;;;;;;;;;;;;;;;;;;;;;;;;;x;;;;;;;;;;;;;;;;;,
-transfer_host_nation_title;Transfer Host Nation;;;;;;;;;;;;;;;;;;;;;;;;;x;;;;;;;;;;;;;;;;;,
-transfer_host_nation_desc;Click to transfer the host nation flag to the target nation.;;;;;;;;;;;;;;;;;;;;;;;;;x;;;;;;;;;;;;;;;;;,
-kick_players_no_milaccess_title;Kick All Target Players;;;;;;;;;;;;;;;;;;;;;;;;;x;;;;;;;;;;;;;;;;;,
-kick_players_no_milaccess_desc;Click to kick all target player-countries from the game.;;;;;;;;;;;;;;;;;;;;;;;;;x;;;;;;;;;;;;;;;;;,
-unsige_country_no_milaccess_title;Unsiege All Target Countries;;;;;;;;;;;;;;;;;;;;;;;;;x;;;;;;;;;;;;;;;;;,
-unsige_country_no_milaccess_desc;Click to unoccupy all non-rebel occupations in target countries.;;;;;;;;;;;;;;;;;;;;;;;;;x;;;;;;;;;;;;;;;;;,
-choose_country_to_siege_title;Choose a Target Country to be the Occupier;;;;;;;;;;;;;;;;;;;;;;;;;x;;;;;;;;;;;;;;;;;,
+;;;;;;;;;;;;;;
+show_host_decisions_title;Show Host Decisions;;;;;;;;;;;;;
+show_host_decisions_desc;Click to show all host decisions;;;;;;;;;;;;;
+hide_host_decisions_title;Hide Host Decisions;;;;;;;;;;;;;
+hide_host_decisions_desc;Click to hide all host decisions;;;;;;;;;;;;;
+ally_all_countries_title;Ally All Countries;;;;;;;;;;;;;
+ally_all_countries_desc;Click to ally all countries in the game;;;;;;;;;;;;;
+unally_all_countries_title;Unally All Countries;;;;;;;;;;;;;
+unally_all_countries_desc;Click to unally all countries in the game;;;;;;;;;;;;;
+get_militaryaccess_with_all_countries_title;Grant Military Access to All Countries;;;;;;;;;;;;;
+get_militaryaccess_with_all_countries_desc;Click to grant military access to all countries in the game. Manually remove the mil access given to the country or countries you want to set as targets for the decisions.;;;;;;;;;;;;;
+remove_militaryaccess_with_all_countries_title;Remove Mil Access Given to All Countries;;;;;;;;;;;;;
+remove_militaryaccess_with_all_countries_desc;Click to remove military access given to all countries in the game;;;;;;;;;;;;;
+transfer_host_nation_title;Transfer Host Nation;;;;;;;;;;;;;
+transfer_host_nation_desc;Click to transfer the host nation flag to the target nation.;;;;;;;;;;;;;
+kick_players_no_milaccess_title;Kick All Target Players;;;;;;;;;;;;;
+kick_players_no_milaccess_desc;Click to kick all target player-countries from the game.;;;;;;;;;;;;;
+unsige_country_no_milaccess_title;Unsiege All Target Countries;;;;;;;;;;;;;
+unsige_country_no_milaccess_desc;Click to unoccupy all non-rebel occupations in target countries.;;;;;;;;;;;;;
+choose_country_to_siege_title;Choose a Target Country to be the Occupier;;;;;;;;;;;;;
 choose_country_to_siege_desc;Click to pick a target country to be the occupier, after clicking this a new decision will unlock allowing you to choose which countries will be sieged by this target country.;;;;;;;;;;;;;;;;;;;;;;;;;x;;;;;;;;;;;;;;;;;
-siege_country_title;Siege All Target Countries to the Occupier;;;;;;;;;;;;;;;;;;;;;;;;;x;;;;;;;;;;;;;;;;;,
-siege_country_desc;Click this to siege all target countries to the occupier you picked earlier;;;;;;;;;;;;;;;;;;;;;;;;;x;;;;;;;;;;;;;;;;;,
-disable_crisis_title;Disable Crisis;;;;;;;;;;;;;;;;;;;;;;;;;x;;;;;;;;;;;;;;;;;,
-disable_crisis_desc;Clicking this decision will disable crisies for the entire game.\nThe decision will only be visible till 1837!;;;;;;;;;;;;;;;;;;;;;;;;;x;;;;;;;;;;;;;;;;;,
-swap_country_title;Change Tag to the Target Country;;;;;;;;;;;;;;;;;;;;;;;;;x;;;;;;;;;;;;;;;;;,
-swap_country_desc;Clicking this decision will change your tag to the target country.;;;;;;;;;;;;;;;;;;;;;;;;;x;;;;;;;;;;;;;;;;;,
-swap_country_host_flag_yes_title;Enable Host Flag Following Tag Changes;;;;;;;;;;;;;;;;;;;;;;;;;x;;;;;;;;;;;;;;;;;,
+siege_country_title;Siege All Target Countries to the Occupier;;;;;;;;;;;;;
+siege_country_desc;Click this to siege all target countries to the occupier you picked earlier;;;;;;;;;;;;;
+disable_crisis_title;Disable Crisis;;;;;;;;;;;;;
+disable_crisis_desc;Clicking this decision will disable crisies for the entire game.\nThe decision will only be visible till 1837!;;;;;;;;;;;;;
+swap_country_title;Change Tag to the Target Country;;;;;;;;;;;;;
+swap_country_desc;Clicking this decision will change your tag to the target country.;;;;;;;;;;;;;
+swap_country_host_flag_yes_title;Enable Host Flag Following Tag Changes;;;;;;;;;;;;;
 swap_country_host_flag_yes_desc;Clicking this decision will make it so when you change tag, the host nation flag will follow to the nation you swap to.;;;;;;;;;;;;;;;;;;;;;;;;;x;;;;;;;;;;;;;;;;;
-swap_country_host_flag_no_title;Disable Host Flag Following Tag Changes;;;;;;;;;;;;;;;;;;;;;;;;;x;;;;;;;;;;;;;;;;;,
-swap_country_host_flag_no_desc;Clicking this decision will disable the host flag following your tag swaps again.;;;;;;;;;;;;;;;;;;;;;;;;;x;;;;;;;;;;;;;;;;;,
-select_country_to_swap_title;Set a Player to Tag Switch to a Target Country.;;;;;;;;;;;;;;;;;;;;;;;;;x;;;;;;;;;;;;;;;;;,
-select_country_to_swap_desc;Click this decision to set a target country as the player to move to the destination tag with the next decision.;;;;;;;;;;;;;;;;;;;;;;;;;x;;;;;;;;;;;;;;;;;,
-select_country_to_swap_to_title;Set The Destination Tag to a Target Country.;;;;;;;;;;;;;;;;;;;;;;;;;x;;;;;;;;;;;;;;;;;,
+swap_country_host_flag_no_title;Disable Host Flag Following Tag Changes;;;;;;;;;;;;;
+swap_country_host_flag_no_desc;Clicking this decision will disable the host flag following your tag swaps again.;;;;;;;;;;;;;
+select_country_to_swap_title;Set a Player to Tag Switch to a Target Country.;;;;;;;;;;;;;
+select_country_to_swap_desc;Click this decision to set a target country as the player to move to the destination tag with the next decision.;;;;;;;;;;;;;
+select_country_to_swap_to_title;Set The Destination Tag to a Target Country.;;;;;;;;;;;;;
 select_country_to_swap_to_desc;Click this decision to set a target country as the destination tag, and move the initially selected player to said tag.;;;;;;;;;;;;;;;;;;;;;;;;;x;;;;;;;;;;;;;;;;;
-reset_swap_selection_title;Reset Tag Switch Selection;;;;;;;;;;;;;;;;;;;;;;;;;x;;;;;;;;;;;;;;;;;,
-reset_swap_selection_desc;Clicking this decision will reset the countries flagged for tag swaps;;;;;;;;;;;;;;;;;;;;;;;;;x;;;;;;;;;;;;;;;;;,
-increase_infamy_title;Increase Infamy;;;;;;;;;;;;;;;;;;;;;;;;;x;;;;;;;;;;;;;;;;;,
-increase_infamy_desc;Increases selected nation's infamy by 1;;;;;;;;;;;;;;;;;;;;;;;;;x;;;;;;;;;;;;;;;;;,
-decrease_infamy_desc;Decreases selected nation's infamy by 1;;;;;;;;;;;;;;;;;;;;;;;;;x;;;;;;;;;;;;;;;;;,
-decrease_infamy_title;Decrease Infamy;;;;;;;;;;;;;;;;;;;;;;;;;x;;;;;;;;;;;;;;;;;,
+reset_swap_selection_title;Reset Tag Switch Selection;;;;;;;;;;;;;
+reset_swap_selection_desc;Clicking this decision will reset the countries flagged for tag swaps;;;;;;;;;;;;;
+increase_infamy_title;Increase Infamy;;;;;;;;;;;;;
+increase_infamy_desc;Increases selected nation's infamy by 1;;;;;;;;;;;;;
+decrease_infamy_desc;Decreases selected nation's infamy by 1;;;;;;;;;;;;;
+decrease_infamy_title;Decrease Infamy;;;;;;;;;;;;;
