--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -206,7 +206,7 @@ PROV847;Hanya;;;;;;;;;;;;;
 PROV848;Kandiye;;;;;;;;;;;;;
 PROV855;Lefkosa;;;;;;;;;;;;;
 PROV856;Limasol;;;;;;;;;;;;;
-PROV857;Gazimagusa;;;;;;;;;;;;;
+PROV857;Girne;;;;;;;;;;;;;
 PROV858;Manastir;;;;;;;;;;;;;
 PROV860;Kostantiniyye;;;;;;;;;;;;;
 PROV861;Skutarion;;;;;;;;;;;;;
