and it only took 1,5h to fix my repository

--- a/GFM/localisation/000_HPM_Misc.csv
+++ b/GFM/localisation/000_HPM_Misc.csv
@@ -2946,3 +2946,4 @@ ladakh_larp_title;Claim Western Tibet;;;;;;;;;;;;;
 ladakh_larp_desc;§RGain 5 infamy§! As the rightful claimants to Ladakh, we must bring under our control the lands they lost to Tibet in the XVII-XVIII centuries and bring our country to control both sides of the Himalayas!;;;;;;;;;;;;;
 dogra_out_now_title;Claim Jammu and Ladakh;;;;;;;;;;;;;
 dogra_out_now_desc;§RGain 5 infamy§! The Sikh Empire had for decades ruled Jammu, but a rogue governor took Jammu for himself in the early 1820s, and the territory was lost. Today we're back in a position to establish lasting control over Jammu and its surrounding territoris once and for all.;;;;;;;;;;;;;
+CASNINENYARONG;\n\nNyarong had been a peaceful region for centuries, but revolts are starting to light the fire of freedom in the region, and our time to shine is nearing. We must hold strong and defend our lands from the powers of the East and West, that only want power for themselves - we must defend Kham!;;;;;;;;;;;;;
