--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -1513,3 +1513,5 @@ PROV4170;Kweihua;;;;;;;;;;;;;
 PROV4171;Balgas;;;;;;;;;;;;;
 PROV4172;Dolonnur;;;;;;;;;;;;;
 PROV4173;Chosuutu;;;;;;;;;;;;;
+PROV4174;Babajan;;;;;;;;;;;;;
+PROV4175;Fuchuan;;;;;;;;;;;;;
