--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -328,8 +328,6 @@ BDN_colonial_company;Hakkari;;;;;;;;;;;;;
 BDN_colonial_company_ADJ;Hakkari;;;;;;;;;;;;;
 MKN;Mukriyan;;;;;;;;;;;;;
 MKN_ADJ;Mukriyani;;;;;;;;;;;;;
-BHT;Bohtan;;;;;;;;;;;;;
-BHT_ADJ;Bohtani;;;;;;;;;;;;;
 BHT_colonial_company;Bohtan;;;;;;;;;;;;;
 BHT_colonial_company_ADJ;Bohtani;;;;;;;;;;;;;
 return_persian_lands_on_finish;Survived the Bedr Khan Revolt;;;;;;;;;;;;;
@@ -2186,15 +2184,21 @@ SYR_radical;Hizb al-Wataniyyin al-Ahrar;;;;;;;;;;;;;
 SYR_communist;Al-hizb ash-Shuyu'i as-Suri;;;;;;;;;;;;;
 SYR_fascist;Al-Hizb Al-Suri Al-Qawmi Al-'Ijtima'i;;;;;;;;;;;;;
 SZC;Sichuan;;;;;;;;;;;;;
-SZC_theocracy;Nyarong;;;;;;;;;;;;;
-SZC_semi_constitutional;Lengbian;;;;;;;;;;;;;
-SZC_constitutional_empire;Lengbian;;;;;;;;;;;;;
-SZC_absolute_empire;Lengbian;;;;;;;;;;;;;
-SZC_ADJ;Sichuan;;;;;;;;;;;;;
-SZC_theocracy_ADJ;Nyarong;;;;;;;;;;;;;
-SZC_semi_constitutional_ADJ;Nyarong;;;;;;;;;;;;;
-SZC_constitutional_ADJ;Nyarong;;;;;;;;;;;;;
-SZC_absolute_empire_ADJ;Nyarong;;;;;;;;;;;;;
+BHT;Nyarong;;;;;;;;;;;;;
+BHT_ADJ;Khami;;;;;;;;;;;;;
+BHT_semi_constitutional;Lengbian;;;;;;;;;;;;;
+BHT_constitutional_empire;Lengbian;;;;;;;;;;;;;
+BHT_absolute_empire;Lengbian;;;;;;;;;;;;;
+GUK_theocracy;Nyarong;;;;;;;;;;;;;
+GUK_theocracy_ADJ;Nyarongi;;;;;;;;;;;;;
+GUK_semi_constitutional_empire;Lengbian;;;;;;;;;;;;;
+GUK_semi_constitutional_empire_ADJ;Khami;;;;;;;;;;;;;
+GUK_constitutional_empire;Lengbian;;;;;;;;;;;;;
+GUK_constitutional_empire_ADJ;Khami;;;;;;;;;;;;;
+GUK_absolute_empire;Lengbian;;;;;;;;;;;;;
+GUK_absolute_empire_ADJ;Khami;;;;;;;;;;;;;
+SZC_ADJ;Sichuani;;;;;;;;;;;;;
+SZC_colonial_company;Szechwan Chongdu;;;;;;;;;;;;;
 SZC_presidential_dictatorship;Sichuan Clique;;;;;;;;;;;;;
 SZC_reactionary;Beiyang Faction;Faction Rongting;Rongting-Fraktion;;;;;;;;;;;
 SZC_socialist;Socialist Party;Parti socialiste;Sozialistische Partei;;;;;;;;;;;
