lake urmia renaming

--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -11230,7 +11230,7 @@ PROV3228;Lake Athabasca;Lac Athabasca;Athabascasee;;Lago Athabasca;;;;;;;;;
 PROV3229;Reindeer Lake;Lac Reindeer;Reindeersee;;Lago Reindeer;;;;;;;;;
 PROV3230;Gulf of Ob;Golfe d'Ob;Golf von Ob;;Golfo de Ob;;;;;;;;;
 PROV3231;Gola Wanê;Lac Van;Van-See;;Lago Van;;;;;;;;;
-PROV3232;Lake Urmia;Lac Urmia;Urmiasee;;Lago Urmia;;;;;;;;;
+PROV3232;Daryâce-ye Orumiye;Lac Urmia;Urmiasee;;Lago Urmia;;;;;;;;;
 PROV3233;Issyk Kul;Issyk Kul;Issyk Kul;;Issyk Kul;;;;;;;;;
 PROV3234;Tsinghai Lake;Lac Tsinghai;Tsinghai-See;;Lago Tsinghai;;;;;;;;;
 PROV3235;Lake Poyang;Lac Poyang;Poyangsee;;Lago Poyang;;;;;;;;;
