--- a/GFM/localisation/all_event_descriptions.csv
+++ b/GFM/localisation/all_event_descriptions.csv
@@ -818,9 +818,9 @@ EVTDESC123588;\n\nYour government type is that of an empire despite your country
 EVTDESC123590;\n\nItaly has accepted our concessions.;;;;;;;;;;;;;
 EVTDESC123591;\n\nItaly has refused our concessions.;;;;;;;;;;;;;
 EVTDESC123600;\n\nThe United States of America has asked to purchase Greenland and Iceland for 1 million dollars.;;;;;;;;;;;;;
-EVTDESC123601;\n\nThe Danish have agreed to sell us Greenland and Iceland for 1 million dollars.;;;;;;;;;;;;;
-EVTDESC1236011;\n\nThe Danish have agreed to sell us Greenland for 500 thousand dollars but declined to sell Iceland.;;;;;;;;;;;;;
-EVTDESC123602;\n\nThe Danish have declined to sell us Greenland and Iceland for 1 million dollars.;;;;;;;;;;;;;
+EVTDESC123601;\n\n$FROMCOUNTRY_ADJ$ has agreed to sell us Greenland and Iceland for 1 million dollars.;;;;;;;;;;;;;
+EVTDESC1236011;\n\n$FROMCOUNTRY$ has agreed to sell us Greenland for 500 thousand dollars but declined to sell Iceland.;;;;;;;;;;;;;
+EVTDESC123602;\n\n$FROMCOUNTRY$ has declined to sell us Greenland and Iceland for 1 million dollars.;;;;;;;;;;;;;
 EVTDESC131000;\n\nNorway has asked to purchase South Georgia for 30000 pounds! This is because of Norway's growing whaling industry.;;;;;;;;;;;;;
 EVTDESC131001;\n\nThe Brits have agreed to sell us South Georgia and the Falklands for 30000 pounds!;;;;;;;;;;;;;
 EVTDESC131002;\n\nThe Brits have declined to sell us South Georgia for 30000 pounds!;;;;;;;;;;;;;
