--- a/GFM/localisation/Colonial_country_names.csv
+++ b/GFM/localisation/Colonial_country_names.csv
@@ -289,7 +289,7 @@ TIG_colonial_company;Erythraea;;;;;;;;;;;;;
 TIG_colonial_company_2;Érythrée;;;;;;;;;;;;;
 TIG_colonial_company_3;Eritreia;;;;;;;;;;;;;
 TIG_colonial_company_4;Colonia Eritrea;;;;;;;;;;;;;
-AWS_colonial_company;Jibuti Strait;;;;;;;;;;;;;
+AWS_colonial_company;Jibuti;;;;;;;;;;;;;
 AWS_colonial_company_2;Côte des Somalis;;;;;;;;;;;;;
 AWS_colonial_company_3;Dschibuti;;;;;;;;;;;;;
 AWS_colonial_company_4;Sagallo;;;;;;;;;;;;;
