--- a/GFM/localisation/00_NNM_modifiers.csv
+++ b/GFM/localisation/00_NNM_modifiers.csv
@@ -90,8 +90,8 @@ ottomanism_reform;Imperial Reform Edict;;;;;;;;;;;;;
 ottomanism_reform_desc;The Islâhat Hatt-i Hümâyûnu has established religious equality among the Empire's minorities, and gone a long way towards assuaging some of the concerns of nationalists within our borders.;;;;;;;;;;;;;
 begin_revolution;Revolutionary State;;;;;;;;;;;;;
 begin_revolution_desc;Our country is a fledgling state, founded in the midst of chaos and rebellion. But the people are willing to fight!;;;;;;;;;;;;;
-zemene_mesafint;Zemene Mesafint;;;;;;;;;;;;;
-zemene_mesafint_desc;The 'Age of Princes', where the rulers of Ethiopia must struggle to unite the nation under a single Emperor.;;;;;;;;;;;;;
+zemene_mesafint_e;Zemene Mesafint;;;;;;;;;;;;;
+zemene_mesafint_e_desc;The 'Age of Princes', where the rulers of Ethiopia must struggle to unite the nation under a single Emperor.;;;;;;;;;;;;;
 irish_integration;Irish Integration;;;;;;;;;;;;;
 irish_oppression;Irish Oppression;;;;;;;;;;;;;
 irish_oppression_desc;The system of absentee landownship has left Ireland a model of inefficiency, and left the Irish continually struggling and rebelling against British rule for centuries.;;;;;;;;;;;;;
