more of my new cb

--- a/GFM/localisation/SarifLocContributions.csv
+++ b/GFM/localisation/SarifLocContributions.csv
@@ -120,7 +120,7 @@ form_Andes_PBC;Unite the Andes!;;;;;;;;;;;;;
 62047_desc;A tragedy occured in the Guantanamo Bay, after the Colombian government had annouced their desire to finally liberate Cuba from Spanish control, a small group of militia with 1,000 men led by Fernando Gomez led an expedition on Guantanamo Bay, on the idea to convince the local people to join their campaign and liberate them from Spanish rule. But as it turns out, the expedition failed when a small spanish army who were already expecting a surprise invasion to Cuba, arrived to Guantanamo and attacked the expedition, resulting in 38 men killed and more than 300 captured along Fernando himself and a couple of civilians who joined their cause. Outrage spread out through the country, with the Colombian foreign minister on Spain demanding the liberation of the captured colombians, which ended up in the foreign minister being expelled from Spain, the assembly now has given the permission to the Colombian government to declare war on Spain. Is it now the time to finally expell the Spanish from the Americas and liberate our fellow soldiers who fought for what was right.;;;;;;;;;;;;;
 62048_desc;After the Guantanamo Incident and the expulsion of the Colombian foreign minister, The Colombians did't found themselves happy for it, and now the Colombian government has now send an official declaration of War with the intent of taking away our islands from ours, though, many aren't sure if we can win against a strong Colombia, we must fight for our nation if it means to protect our national sovereign.;;;;;;;;;;;;;
 62049_desc;A threat against our holdings in the americas arise, when the Colombian government has declared their wishes to "liberate" Cuba and Puerto Rico from us, and delcarting that our holdings in the Americas are illegal and unethical, it is clear that they are preparing for a war against us, we better get ready for what is coming.;;;;;;;;;;;;;
-62050_desc;Our Victory against the Spaniards has allowed us to finally free the Islands from the Spanish rule and now, we hold control of Cuba and Puerto Rico, the Spanish rule over the Americas are over, this is a great time to celebrate.;;;;;;;;;;;;;
+62050_desc;Our defeat against the Colombians was a deadly blow to the Spanish Empire. Now we have been forced to hand over the control of Cuba and Puerto Rico to the Colombians, the Spanish rule over the Americas are over, and the great damage to our prestige will serve as a humiliation for all the world to see...;;;;;;;;;;;;;
 622050_desc;We have been defeated by the Spanish, and now we are forced to give up any claims on the Caribbean as well as Hispaniola, once again, we fall back against the European power.;;;;;;;;;;;;;
 62051_desc;After our independence, we have struggled to maintain united and let the country in disarray. But now, after years of rebuilding, we have risen up in the world, grown in strength and expanded against our rivals, as well as the dominance in the Caribbean. Soon other countries has started to recognize us as a power to be reckoned with, on par with the European Powers, our people are celebrating and proud to be part of our nation, and we will keep growing stronger in the future.;;;;;;;;;;;;;
 AGRESSION_CUT_DOWN_TO_SIZE_NO_INFAMY_WAR_NAME_GCO_PBC;The Partition of Peru;;;;;;;;;;;;;
@@ -129,10 +129,12 @@ AGRESSION_CUT_DOWN_TO_SIZE_NO_INFAMY_WAR_NAME_GCO_BRZ;The Amazon War;;;;;;;;;;;;
 NORMAL_CUT_DOWN_TO_SIZE_NO_INFAMY_WAR_NAME_GCO_BRZ;The Amazon War;;;;;;;;;;;;;
 AGRESSION_CUT_DOWN_TO_SIZE_NO_INFAMY_WAR_NAME_GCO_HAI;The Hispanola War;;;;;;;;;;;;;
 NORMAL_CUT_DOWN_TO_SIZE_NO_INFAMY_WAR_NAME_GCO_HAI;The Hispanola War;;;;;;;;;;;;;
-AGRESSION_WAR_ALL_CORES_NAME_GCO_SPA;The Spanish-Colombian War;;;;;;;;;;;;;
-AGRESSION_WAR_ALL_CORES_NAME_GCO_SPC;The Spanish-Colombian War;;;;;;;;;;;;;
-NORMAL_WAR_ALL_CORES_NAME_GCO_SPA;The Spanish-Colombian War;;;;;;;;;;;;;
-NORMAL_WAR_ALL_CORES_NAME_GCO_SPC;The Spanish-Colombian War;;;;;;;;;;;;;
+AGRESSION_CUT_DOWN_TO_SIZE_NO_INFAMY_WAR_NAME_GCO_SPA;The Spanish-Colombian War;;;;;;;;;;;;;
+AGRESSION_CUT_DOWN_TO_SIZE_NO_INFAMY_WAR_NAME_GCO_SPC;The Spanish-Colombian War;;;;;;;;;;;;;
+AGRESSION_CUT_DOWN_TO_SIZE_NO_INFAMY_WAR_NAME_GCO_IBR;The Spanish-Colombian War;;;;;;;;;;;;;
+NORMAL_CUT_DOWN_TO_SIZE_NO_INFAMY_WAR_NAME_GCO_SPA;The Spanish-Colombian War;;;;;;;;;;;;;
+NORMAL_CUT_DOWN_TO_SIZE_NO_INFAMY_WAR_NAME_GCO_SPC;The Spanish-Colombian War;;;;;;;;;;;;;
+NORMAL_CUT_DOWN_TO_SIZE_NO_INFAMY_WAR_NAME_GCO_IBR;The Spanish-Colombian War;;;;;;;;;;;;;
 greater_colombia;Uniting the Andes;;;;;;;;;;;;;
 greater_colombia_desc; We have united a majority of our Hispanic American brotheren into one nation, as the founding fathers had envisioned.;;;;;;;;;;;;;
 andean_civil_war; The Andean Brother's War;;;;;;;;;;;;;
@@ -196,4 +198,4 @@ treaty_of_cuzco_desc;As expected, the “Supreme Protector” could not handle a thr
 treaty_of_manaus_title;Treaty of Manaus;;;;;;;;;;;;;
 treaty_of_manaus_desc;We have won the Amazon War, now it's time to set up our demands on the new borders of the Amazonas.;;;;;;;;;;;;;
 treaty_of_havana_title;The Treaty of Havana;;;;;;;;;;;;;
-treaty_of_havana_desc;Our victory against the Colombians has strengthened our position in the Americas, and now is time to remove any presence of the Colombians in the caribbean, we agree to release the Colombian prisoners in exchange for their holdings in the Caribe, as well as the renounsal of their claims on the caribe.;;;;;;;;;;;;;
+treaty_of_havana_desc;Our victory in the Spanish-Colombian war has strengthened our position in the Americas, and now is time to remove any presence of the enemy in the caribbean. It's agreed by both parties the release the Colombian prisoners and the hand over of the enemy's holdings in the Caribe, as well as the renounsal of their claims on the caribe.;;;;;;;;;;;;;
