renaming for ladoga, onega and peipsi

--- a/GFM/localisation/000_HPM_Misc.csv
+++ b/GFM/localisation/000_HPM_Misc.csv
@@ -1580,7 +1580,7 @@ FREIRESEXPEDITION;News has reached us that liberal leader Ramón Saturnino Andrés
 PROV3619;Shvenchonelyay;;;;;;;;;;;;;
 PROV3620;Novogrudok;;;;;;;;;;;;;
 PROV3621;Vileyka;;;;;;;;;;;;;
-PROV3622;Lake Beloye;;;;;;;;;;;;;
+PROV3622;Ozero Beloye;;;;;;;;;;;;;
 PROV3623;Lake Alakol;;;;;;;;;;;;;
 PROV3624;Lake Zaysan;;;;;;;;;;;;;
 PROV3625;Lake Uvs;;;;;;;;;;;;;
