--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -10743,7 +10743,7 @@ PROV2707;Gulf of Finland;Golfe de Finlande;Finnischer Meerbusen;;Golfo de Finlan
 PROV2708;Western Baltic Sea;Mer Baltique occidentale;Westliche Ostsee;;Mar Báltico Occidental;;;;;;;;;
 PROV2709;Gulf of Riga;Golfe de Riga;Golf von Riga;;Golfo de Riga;;;;;;;;;
 PROV2710;Southern Baltic Sea;Mer Baltique méridionale;Südliche Ostsee;;Mar Báltico Meridional;;;;;;;;;
-PROV2713;Peipsi Järv;Peipsi Järv;Peipsi Järv;;Peipsi Järv;;;;;;;;;
+PROV2713;Peipussee;Peipsi Järv;Peipsi Järv;;Peipsi Järv;;;;;;;;;
 PROV2714;Ozero Ladoga;Lake Ladoga;Lake Ladoga;;Lago Ladoga;;;;;;;;;
 PROV2715;Onega;Onega;Onega;;Onega;;;;;;;;;
 PROV2716;White Sea;Mer Blanche;Weißmeer;;Mar Blanco;;;;;;;;;
