proper event chain, rename and treaty for tarfaya

--- a/GFM/localisation/00_HPM_decisions.csv
+++ b/GFM/localisation/00_HPM_decisions.csv
@@ -1062,7 +1062,7 @@ form_arab_union_title;Form Arab Union;;;;;;;;;;;;;
 form_arab_union_desc;A nation must arise to lead the Arab peoples of the world into the future, a greater power that would unite the Arab world from Morocco to the Mashriq.;;;;;;;;;;;;;
 apply_for_USCA_statehood_title;Apply for FRCA Statehood;;;;;;;;;;;;;
 apply_for_USCA_statehood_desc;To further our own prosperity, we seek to become part of the Federal Republic of Central America.;;;;;;;;;;;;;
-belize_purchase_title;Belize Purchase;;;;;;;;;;;;;
+belize_purchase_title;The Belize Purchase;;;;;;;;;;;;;
 belize_purchase_desc;We are interested in purchasing Belize from Great Britain and integrating it into the United States of Central America. As such, we have have sent delegates overseas to London and are currently awaiting a reply. Having very good relations with the UK, an alliance with them or being a Great Power will greatly improve our chances of getting a deal.;;;;;;;;;;;;;
 reform_the_USCA_title;Reform the Federal Republic of Central America;;;;;;;;;;;;;
 reform_the_USCA_desc;The time has come for the Federal Republic to be reformed. Long live Central America!;;;;;;;;;;;;;
