--- a/GFM/localisation/0_cb_types.csv
+++ b/GFM/localisation/0_cb_types.csv
@@ -84,6 +84,10 @@ cut_down_to_size_no_infamy;Cut down to size;;;;;;;;;;;
 cut_down_to_size_no_infamy_short;Cut $RECIPIENT$ down to size;;;;;;;;;;;
 cut_down_to_size_no_infamy_desc;Force another §Ycountry§W to disarm and pay reparations to us;;;;;;;;;;;
 cut_down_to_size_no_infamy_setup;Cut $RECIPIENT$ down to size;;;;;;;;;;;
+scripted_war_minuscule;Declaration of War;;;;;;;;;;;
+scripted_war_minuscule_short;Demand a peace treaty;;;;;;;;;;;
+scripted_war_minuscule_desc;Force another §Ycountry§W to negotiate a peace treaty;;;;;;;;;;;
+scripted_war_minuscule_setup;Demand a peace treaty;;;;;;;;;;;
 scripted_war_small;Declaration of War;;;;;;;;;;;
 scripted_war_small_short;Demand a peace treaty;;;;;;;;;;;
 scripted_war_small_desc;Force another §Ycountry§W to negotiate a peace treaty;;;;;;;;;;;
