more lake renaming, peru cleanup

--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -433,7 +433,7 @@ PROV2595;Nunavut;;;;;;;;;;;;;
 PROV2601;Wilkinkarra;;;;;;;;;;;;;
 PROV2603;Chanamee;;;;;;;;;;;;;
 PROV2605;Ngaanyatjarraku;;;;;;;;;;;;;
-PROV2606;Balkhash;;;;;;;;;;;;;
+PROV2606;Balqash;;;;;;;;;;;;;
 PROV2613;Nadym;;;;;;;;;;;;;
 PROV2614;Shadrinsk;;;;;;;;;;;;;
 PROV2625;North West River;;;;;;;;;;;;;
