--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -11108,8 +11108,8 @@ PROV3100;Marie-Celeste Fracture Zone;Zone de fracture de Marie Celeste ;Marie-Ce
 PROV3103;Lake Tanganyika;Lac Tangayika;Tangayikasee;;Lago Tanganika;;;;;;;;;
 PROV3105;Gulden-Draak Seamount;Mont sous-marin de Gulden-Draak;Gulden-Draak Seamount;;Plataforma de Gulden-Draak;;;;;;;;;
 PROV3108;Lake Dongting;Lac Dongting;Dongtingsee;;Lago Dongting;;;;;;;;;
-PROV3109;Lake Titicaca;Lac Titicaca;Titicacasee;;Lago Titicaca;;;;;;;;;
-PROV3110;Lake Nicaragua;Lac Nicaragua;Nicaraguasee;;Lago Nicaragua;;;;;;;;;
+PROV3109;Lago Titicaca;Lac Titicaca;Titicacasee;;Lago Titicaca;;;;;;;;;
+PROV3110;Lago Cocibolca;Lac Nicaragua;Nicaraguasee;;Lago Nicaragua;;;;;;;;;
 PROV3111;Sedna Basin;Bassin de Sedna;Sednabecken;;Cuenca de Sedna;;;;;;;;;
 PROV3112;Lake Ontario;Lac Ontario;Ontariosee;;Lago Ontario;;;;;;;;;
 PROV3113;Lake Erie;Lac Erie;Eriesee;;Lago Erie;;;;;;;;;
@@ -11237,7 +11237,7 @@ PROV3235;Lake Poyang;Lac Poyang;Poyangsee;;Lago Poyang;;;;;;;;;
 PROV3237;Sohm Plain;Plaine de Sohm;Sohm-Ebene;;Litoral de Sohm;;;;;;;;;
 PROV3238;Rwitanzigye;Lac Mweru;Mwerusee;;Lago Mweru;;;;;;;;;
 PROV3239;Lake Champlain;Lac Champlain;Champlainsee;;Lago Champlain;;;;;;;;;
-PROV3240;Lake Poopo;Lac Poopo;Pooposee;;Lago Poopo;;;;;;;;;
+PROV3240;Lago Poopo;Lac Poopo;Pooposee;;Lago Poopo;;;;;;;;;
 PROV3241;Arctic Ocean;Océan Arctique;Arktisches Meer;;Océano Ártico;;;;;;;;;
 PROV3242;Lake Kivu;Canal de Maury;Maury-Seekanal;;Aguas del Maury Channel;;;;;;;;;
 PROV3243;Southeast Pacific Basin;Bassin pacifique du Sud-Est;Südöstliches Pazifikbecken;;Cuenca del sureste del Pacífico;;;;;;;;;
