more German hills

--- a/GFM/localisation/00_GFM_Terrains.csv
+++ b/GFM/localisation/00_GFM_Terrains.csv
@@ -239,7 +239,7 @@ canton;Floodplain Farmlands;;;;;;;;;;;;;
 annecy;Montane Grassland;;;;;;;;;;;;;
 kassel;Grassland;;;;;;;;;;;;;
 nagasaki;Floodplain Farmlands;;;;;;;;;;;;;
-koblenz;Farmlands;;;;;;;;;;;;;
+koblenz;Grassland Hills;;;;;;;;;;;;;
 rouen;Farmlands;;;;;;;;;;;;;
 lubeck;Farmlands;;;;;;;;;;;;;
 pozan;Farmlands;;;;;;;;;;;;;
@@ -693,7 +693,7 @@ stanislawow;Forest Hills;;;;;;;;;;;;;
 staunton;Montane Forest;;;;;;;;;;;;;
 stetienne;Grassland Hills;;;;;;;;;;;;;
 torun;Farmlands;;;;;;;;;;;;;
-trier;Grassland;;;;;;;;;;;;;
+trier;Grassland Hills;;;;;;;;;;;;;
 truckee;Montane Grassland;;;;;;;;;;;;;
 tsaritsyn;Grassland;;;;;;;;;;;;;
 tver;Forest;;;;;;;;;;;;;
@@ -708,7 +708,7 @@ vlore;Farmlands;;;;;;;;;;;;;
 voronezh;Farmlands;;;;;;;;;;;;;
 weimar;Grassland;;;;;;;;;;;;;
 wetzlar;Farmlands;;;;;;;;;;;;;
-wiesbaden;Farmlands;;;;;;;;;;;;;
+wiesbaden;Grassland Hills;;;;;;;;;;;;;
 wurzburg;Grassland Hills;;;;;;;;;;;;;
 yaroslavl;Forest;;;;;;;;;;;;;
 zaragoza;Farmlands;;;;;;;;;;;;;
@@ -1209,7 +1209,7 @@ catanzaro;Grassland Hills;;;;;;;;;;;;;
 cawnpore;Floodplain Farmlands;;;;;;;;;;;;;
 chambery;Montane Grassland;;;;;;;;;;;;;
 cherbourg;Farmlands;;;;;;;;;;;;;
-cloppenburg;Grassland;;;;;;;;;;;;;
+cloppenburg;Farmlands;;;;;;;;;;;;;
 cocos_islands;Atoll;;;;;;;;;;;;;
 da_nang;Jungle Hills;;;;;;;;;;;;;
 dessau;Farmlands;;;;;;;;;;;;;
@@ -1223,7 +1223,7 @@ ferrara;Farmlands;;;;;;;;;;;;;
 flatow;Forest;;;;;;;;;;;;;
 fulda;Forest;;;;;;;;;;;;;
 gabes;Semidesert;;;;;;;;;;;;;
-giessen;Farmlands;;;;;;;;;;;;;
+giessen;Grassland Hills;;;;;;;;;;;;;
 gnesen;Farmlands;;;;;;;;;;;;;
 gumbinnen;Farmlands;;;;;;;;;;;;;
 hai_phong;Floodplain Farmlands;;;;;;;;;;;;;
