--- a/GFM/localisation/LocMergeFile.csv
+++ b/GFM/localisation/LocMergeFile.csv
@@ -433,7 +433,7 @@ in_bankrupcy;In bankruptcy;En faillite;In Insolvenz;;;;;;;;;;;
 in_bankrupcy_desc;We are bankrupt!;Nous sommes en faillite !;Wir sind zahlungsunfähig!;;;;;;;;;;;
 PV_INTERNAL_IMMIGRATION;Internal Migration: ;Migration interne : ;Interne Migration: ;;;;;;;;;;;
 PV_EXTERNAL_IMMIGRATION;External Migration: ;Immigration : ;Externe Migration: ;;;;;;;;;;;
-COUNTRYALERT_CanRemoveFromSphere;We can remove nations from our §YSphere of Influence§!:;Nous pouvons sortir des pays de notre §YSphere of Influence§ !;Wir können Nationen aus unserer §YEinflusssphäre§! entfernen:;;;;;;;;;;;
+COUNTRYALERT_CanRemoveFromSphere;We can remove nations from another nation's §YSphere of Influence§!:;Nous pouvons sortir des pays de notre §YSphere of Influence§ !;Wir können Nationen aus unserer §YEinflusssphäre§! entfernen:;;;;;;;;;;;
 PV_CLERGY_LIT_DESC2;Optimal is $OPT$.;L'idéal serait $OPT$.;Optimal sind $OPT$.;;;;;;;;;;;
 PV_CLERGY_LIT_DESC3;Monthly change base value: $VAL$;Modification de base mensuelle : $VAL$;monatliche Grundveränderung: $VAL$;;;;;;;;;;;
 the_meiji_restoration2_title;Early Meiji Restoration;Première restauration Meiji;Frühe Meiji-Restauration;;;;;;;;;;;
