--- a/GFM/localisation/000_HPM_Misc.csv
+++ b/GFM/localisation/000_HPM_Misc.csv
@@ -1588,7 +1588,7 @@ PROV3626;Khövsgöl Nuur;;;;;;;;;;;;;
 PROV3627;Lake Hongze;;;;;;;;;;;;;
 PROV3628;Lake Mweru;;;;;;;;;;;;;
 PROV3629;Lake Dubawnt;;;;;;;;;;;;;
-PROV3630;Garabogazköi Basin;;;;;;;;;;;;;
+PROV3630;Garabogazköl Aylagy;;;;;;;;;;;;;
 PROV3631;Chott al-Djerid;;;;;;;;;;;;;
 PROV3632;Namakzar;;;;;;;;;;;;;
 PROV3633;Lake Mackay;;;;;;;;;;;;;
