cambodian starting names + renaming

--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -268,7 +268,7 @@ PROV1290;Umerkot;;;;;;;;;;;;;
 PROV1352;Chumphon;;;;;;;;;;;;;
 PROV1360;Xiangabouli;;;;;;;;;;;;;
 PROV1363;Pakse;;;;;;;;;;;;;
-PROV1364;Phnom Penh;;;;;;;;;;;;;
+PROV1364;Phnum Pénh;;;;;;;;;;;;;
 PROV1377;Dà Nang;;;;;;;;;;;;;
 PROV1382;Hà Tiên;;;;;;;;;;;;;
 PROV1385;Tanjung Puteri;;;;;;;;;;;;;
