--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -9690,9 +9690,9 @@ PROV1359;Sisaket;Sisaket;Sisaket;;Sisaket;;;;;;;;;
 PROV1361;Savannakhet;Savannakhet;Savannakhet;;Savannakhet;;;;;;;;;
 PROV1362;Salavan;Salavan;Salavan;;Salavan;;;;;;;;;
 PROV1365;Chanthaburi;Chanthaburi;Chanthaburi;;Chanthaburi;;;;;;;;;
-PROV1366;Battambang;Battambang;Battambang;;Bãtdâmbâng;;;;;;;;;
-PROV1367;Kampot;Kampot;Kampot;;Kampot;;;;;;;;;
-PROV1368;Stongtreng;Stongtreng;Stongtreng;;Stongtreng;;;;;;;;;
+PROV1366;Batdâmbâng;Battambang;Battambang;;Bãtdâmbâng;;;;;;;;;
+PROV1367;Kâmpôt;Kampot;Kampot;;Kampot;;;;;;;;;
+PROV1368;Stoeng Trêng;Stongtreng;Stongtreng;;Stongtreng;;;;;;;;;
 PROV1369;Hà Nôi;Hà Nôi;Hà Nôi;;Hà Nôi;;;;;;;;;
 PROV1370;Hài Phòng;Hài Phòng;Hài Phòng;;Hài Phòng;;;;;;;;;
 PROV1371;Cao Bang;Cao Bang;Cao Bang;;Cao Bang;;;;;;;;;
@@ -9703,7 +9703,7 @@ PROV1375;Huê;Huê;Huê;;Huê;;;;;;;;;
 PROV1376;Vinh;Vinh;Vinh;;Vinh;;;;;;;;;
 PROV1378;Pleiku;Pleiku;Pleiku;;Pleiku;;;;;;;;;
 PROV1379;Quy Nhon;Quy Nhon;Quy Nhon;;Quy Nhon;;;;;;;;;
-PROV3925;Phan Rí;Phan Rí;Phan Rí;;Phan Rí;;;;;;;;;
+PROV3925;Di Linh;Phan Rí;Phan Rí;;Phan Rí;;;;;;;;;
 PROV1380;Sài Gòn;Sài Gòn;Sài Gòn;;Sài Gòn;;;;;;;;;
 PROV1381;Dà Lat;Dà Lat;Dà Lat;;Dà Lat;;;;;;;;;
 PROV1383;Sóc Trang;Sóc Trang;Sóc Trang;;Sóc Trang;;;;;;;;;
@@ -11361,7 +11361,7 @@ FRA_1907;Lower Volta;Ghana;Ghana;;Ghana;;;;;;;;;
 FRA_1914;Togo;Togo;Togo;;Togo;;;;;;;;;
 FRA_1972;Gabon;Gabon;Gabun;;Gabón;;;;;;;;;
 ENG_2014;Zambia;Zambie;Zambia;;Zambia;;;;;;;;;
-SIA_1366;Cambodia;Cambodge;Kambodscha;;Camboya;;;;;;;;;
+SIA_1366;Kâmpuchéa;Cambodge;Kambodscha;;Camboya;;;;;;;;;
 AUS_613;Kärnten-Steiermark;Kärnten-Steiermark;Kärnten-Steiermark;;Kärnten-Steiermark;;;;;;;;;
 AUS_612;Tirol;Tyrol;Tirol;;Tirol;;;;;;;;;
 AUS_662;Ostgalizien;Galice orientale;Ostgalizien;;Galitzia Oriental;;;;;;;;;
