--- a/GFM/localisation/000_HPM_Misc.csv
+++ b/GFM/localisation/000_HPM_Misc.csv
@@ -427,7 +427,7 @@ USS_claim_ANT_title;Claim the Antilles;;;;;;;;;;;;;
 USS_claim_ANT_desc;The Antilles were discovered by our Latin brothers, and the English and French forced us to give the isles to them to use African slaves there to exploit sugar cane. With some of the islands having Latins waiting for them to be liberated and the Miranda Doctrine, we can claim the Antilles.;;;;;;;;;;;;;
 PROV3545;Lake Hinkai;;;;;;;;;;;;;
 PROV3546;Lake Taihu;;;;;;;;;;;;;
-PROV3547;Tonlé Sap;;;;;;;;;;;;;
+PROV3547;Tônlé Sab;;;;;;;;;;;;;
 PROV3548;Lake Qilin;;;;;;;;;;;;;
 PROV3549;Daryacheh-ye Namak;;;;;;;;;;;;;
 PROV3550;Lake Michikamau;;;;;;;;;;;;;
