convention of peking fixes

--- a/GFM/localisation/000_HPM_Misc.csv
+++ b/GFM/localisation/000_HPM_Misc.csv
@@ -432,7 +432,7 @@ PROV3548;Lake Qilin;;;;;;;;;;;;;
 PROV3549;Daryacheh-ye Namak;;;;;;;;;;;;;
 PROV3550;Lake Michikamau;;;;;;;;;;;;;
 PROV3551;Mwitanzige;;;;;;;;;;;;;
-PROV3552;Lake Sarygamysh;;;;;;;;;;;;;
+PROV3552;Sarygamysh Köli;;;;;;;;;;;;;
 PROV3553;Bodensee;;;;;;;;;;;;;
 PROV2745;Gulf of Cádiz;;;;;;;;;;;;;
 PROV2750;Côte d'Azure;;;;;;;;;;;;;
