--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -488,7 +488,7 @@ PROV2786;Gulf of Oman;;;;;;;;;;;;;
 PROV2787;Hormuz Strait;;;;;;;;;;;;;
 PROV2839;Gulf of Patience;;;;;;;;;;;;;
 PROV2830;East Sea;;;;;;;;;;;;;
-PROV2831;Soya Strait;;;;;;;;;;;;;
+PROV2831;Northern Sea of Japan;;;;;;;;;;;;;
 PROV2834;Bay of Ayan;;;;;;;;;;;;;
 PROV2836;Coast of Kamchatka;;;;;;;;;;;;;
 PROV2837;Sea of Okhotsk;;;;;;;;;;;;;
