--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -11222,7 +11222,7 @@ PROV3220;Coast of Norfolk Island;Côte de l'Île Norfolk;Küste der Norfolk-Insel;;
 PROV3221;Coast of the Gilbert Islands;Côte des Îles Gilbert;Küste der Gilbert-Inseln;;Costa de las Islas Gilbert;;;;;;;;;
 PROV3222;Mainu Reef;Récif de Mainu;Mainu-Riff;;Arrecife de Mainu;;;;;;;;;
 PROV3223;Tusei Bank;Banc de Tusei ;Tusei Bank;;Banco de Tusei;;;;;;;;;
-PROV3224;Lake Tana;Lac Tana;Tanasee;;Lago Tana;;;;;;;;;
+PROV3224;T'ana Hayik'i;Lac Tana;Tanasee;;Lago Tana;;;;;;;;;
 PROV3225;Gran Lago Salado;Gran Lago Salado;Gran Lago Salado;;Gran Lago Salino;;;;;;;;;
 PROV3226;South Australian Plain;Plaine australienne méridionale;Südaustralische Ebene;;Litoral meridional de Australian ;;;;;;;;;
 PROV3227;Great Slave Lake;Grand lac des esclaves;Großer Sklavensee;;Gran Lago del Esclavo;;;;;;;;;
