--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -10988,7 +10988,7 @@ PROV2979;Puerto Rico Trench;;;;;;;;;;;;;
 PROV2980;Guyana Coast;Côte de Guyane;Küste von Guyana;;Costa de Guyana;;;;;;;;;
 PROV2981;Coast of Amapá;Côte d'Amapa;Küste von Amapa;;Costa de Amapa;;;;;;;;;
 PROV2982;Amazonas Gulf;Golfe d'Amazonas;Amazonas-Golf;;Golfo del Amazonas;;;;;;;;;
-PROV2983;Coast of Brazil;Côte du Brésil;Küste von Brazil;;Costa de Brasil;;;;;;;;;
+PROV2983;Coast of Ceará;Côte du Brésil;Küste von Brazil;;Costa de Brasil;;;;;;;;;
 PROV2984;Coast of Recife;Côte de Recife;Küste von Recife;;Costa de Recife;;;;;;;;;
 PROV2985;Coast of Pernambuco;Côte de Pernambuc;Küste von Pernambuco;;Costa de Pernambuco;;;;;;;;;
 PROV2986;Todos os Santos Bay;Baie de Todos Santos;Todos Santos-Bucht;;Bahía de Todos los Santos ;;;;;;;;;
