Hawaii alternate flag + Bourbon Italy failsafe hopefully

--- a/GFM/localisation/0000Trigori_text.csv
+++ b/GFM/localisation/0000Trigori_text.csv
@@ -554,3 +554,10 @@ MOD_constitutional_empire;Modena-Reggio;;;;;;;;;;;;;
 GER_liberal_2;Nationalliberale;Nationalliberale ;Nationalliberale ;;Nationalliberale ;;;;;;;;;
 GER_conservative_3;Freikonservative Partei;;;;;;;;;;;;;
 GER_reactionary_2;Deutschkonservative Partei;Nationale Partei;Nationale Partei;;Nationale Partei;;;;;;;;;
+EVTNAME811;Ordinance on the National Flag;;;;;;;;;;;;;
+EVTDESC811;With the recent unification of Italy, confusion is abound regarding the national flag. Some are seen flying Savoyard banners and a foreign match company has even printed them on their boxes as our official flag! We should make it clear that we have but one flag of Italy: it is the one with our ancient and complex dynastic achievements right in the middle.;;;;;;;;;;;;;
+EVT811OPTA;Sign it!;;;;;;;;;;;;;
+EVTNAME812;A New Flag?;;;;;;;;;;;;;
+EVTDESC812;The current international situation of Hawai'i has made the similarity of our flag to that of Britain a problem of increasing proportions. Advisors suggest that it would be prudent if we avoided any future faux pas by adopting the personal flag of Your Majesty as the state flag of our kingdom, Union Jack gone.;;;;;;;;;;;;;
+EVT812OPTA;It only makes sense.;;;;;;;;;;;;;
+EVT812OPTB;No, Britain should change!;;;;;;;;;;;;;
