--- a/GFM/localisation/Colonial_country_names.csv
+++ b/GFM/localisation/Colonial_country_names.csv
@@ -523,6 +523,8 @@ MEX_colonial_company;Commonwealth of Mexico;;;;;;;;;;;;;
 IRE_colonial_company;Irish Free State;;;;;;;;;;;;;
 IRE_colonial_company_2;Territoire d'Irlande;;;;;;;;;;;;;
 IRE_colonial_company_3;Schutzgebiet Irland;;;;;;;;;;;;;
+SCO_colonial_company_2;Écosse;;;;;;;;;;;;;
+SCO_colonial_company_3;Schottland;;;;;;;;;;;;;
 OMA_colonial_company;Sultanate of Muscat and Oman;;;;;;;;;;;;;
 OMA_colonial_company_2;Protectorat d'Oman et de Mascate;;;;;;;;;;;;;
 OMA_colonial_company_3;Schutzgebiet Oman;;;;;;;;;;;;;
