Vojvodina uprising favourable to AUS

--- a/GFM/localisation/0000Trigori_text.csv
+++ b/GFM/localisation/0000Trigori_text.csv
@@ -561,3 +561,6 @@ EVTNAME812;A New Flag?;;;;;;;;;;;;;
 EVTDESC812;The current international situation of Hawai'i has made the similarity of our flag to that of Britain a problem of increasing proportions. Advisors suggest that it would be prudent if we avoided any future faux pas by adopting the personal flag of Your Majesty as the state flag of our kingdom, Union Jack gone.;;;;;;;;;;;;;
 EVT812OPTA;It only makes sense.;;;;;;;;;;;;;
 EVT812OPTB;No, Britain should change!;;;;;;;;;;;;;
+EVTDESC640;The Serbs of Vojvodina have successfully campaigned against the treasonous Hungarians and now stand at peace. Despite their apparent loyalty to our most illustrious house, perhaps it would still be prudent to quickly reintegrate them before they decide to join Serbia down south...;;;;;;;;;;;;;
+EVTDESC641;After our victory against the Hungarians, the Austrians now seek to regain control over Vojvodina. We did, in fact, fight more or less in the name of the emperor who now promises us our own crownland, but perhaps unification with Serbia would be preferable regardless...;;;;;;;;;;;;;
+
