Great Britain and England-Wales lol

--- a/GFM/localisation/0000Trigori_text.csv
+++ b/GFM/localisation/0000Trigori_text.csv
@@ -563,4 +563,9 @@ EVT812OPTA;It only makes sense.;;;;;;;;;;;;;
 EVT812OPTB;No, Britain should change!;;;;;;;;;;;;;
 EVTDESC640;The Serbs of Vojvodina have successfully campaigned against the treasonous Hungarians and now stand at peace. Despite their apparent loyalty to our most illustrious house, perhaps it would still be prudent to quickly reintegrate them before they decide to join Serbia down south...;;;;;;;;;;;;;
 EVTDESC641;After our victory against the Hungarians, the Austrians now seek to regain control over Vojvodina. We did, in fact, fight more or less in the name of the emperor who now promises us our own crownland, but perhaps unification with Serbia would be preferable regardless...;;;;;;;;;;;;;
-
+ENG_absolute_empire;Great Britain;;;;;;;;;;;;;
+ENG_semi_constitutional_empire;Great Britain;;;;;;;;;;;;;
+ENG_constitutional_empire;Great Britain;;;;;;;;;;;;;
+ENL_absolute_empire;England-Wales;;;;;;;;;;;;;
+ENL_semi_constitutional_empire;England-Wales;;;;;;;;;;;;;
+ENL_constitutional_empire;England-Wales;;;;;;;;;;;;;
