--- a/GFM/localisation/0000Trigori_text.csv
+++ b/GFM/localisation/0000Trigori_text.csv
@@ -569,3 +569,5 @@ ENG_constitutional_empire;Great Britain;;;;;;;;;;;;;
 ENL_absolute_empire;England-Wales;;;;;;;;;;;;;
 ENL_semi_constitutional_empire;England-Wales;;;;;;;;;;;;;
 ENL_constitutional_empire;England-Wales;;;;;;;;;;;;;
+form_england_wales_title;The Anglo-Welsh Compromise;;;;;;;;;;;;;
+form_england_wales_desc;As our power has been greatly diminished, growing voices now clamour for the independence of Wales to further our demise. A disaster of such proportions would leave fair old England in a most rumpuous position, a laughing stock of Europe, far behind even the dreadful Hibernian. To regain momentum, perhaps it would be prudent to call upon the glory of the Tudors and the majesty of Arthur - to find a compromise and create a new United Kingdom: that of England and Wales.;;;;;;;;;;;;;
